# web-scroller-pro

./: pyproject.toml  replit.md
traffic_guru/: README.md  data.db  generate_license.py  main.py  requirements.txt  setup_venv.sh  test_db.py  test_refresh.py
traffic_guru/core/: browser_automation.py  proxy_manager.py  sitemap_parser.py
traffic_guru/database/: db.py
traffic_guru/license/: license_manager.py
traffic_guru/ui/: automation_settings.py  dashboard.py  license_dialog.py  log_console.py  main_window.py  proxy_settings.py  styles.py  url_manager.py
traffic_guru/utils/: helpers.py
