[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=47.0.0",
    "fake-useragent>=2.2.0",
    "lxml>=6.1.0",
    "pyqt6>=6.11.0",
    "requests>=2.33.1",
    "selenium>=4.43.0",
    "webdriver-manager>=4.0.2",
]
